Basic Data Information and Structuring

--- a/H1N1_Flu_VaccinePrediction.ipynb
+++ b/H1N1_Flu_VaccinePrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyiZNcTE+TTf0utl5YFjQK"
+      "authorship_tag": "ABX9TyPd0U+zYXGaeMJYMHzMApoC"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +16,42 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "#PROBLEM DESCRIPTION\n",
+        "To predict how likely individuals are to receive their H1N1 and seasonal flu vaccines. Specifically, we have to predict two probabilities: one for h1n1_vaccine and one for seasonal_vaccine.\n",
+        "\n",
+        "Each row in the dataset represents one person who responded to the National 2009 H1N1 Flu Survey."
+      ],
+      "metadata": {
+        "id": "IAgw108IbtCR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Labels\n",
+        "There are two target variables:\n",
+        "\n",
+        "h1n1_vaccine - Whether respondent received H1N1 flu vaccine.\n",
+        "seasonal_vaccine - Whether respondent received seasonal flu vaccine.\n",
+        "Both are binary variables: 0 = No; 1 = Yes.<br>\n",
+        "Some respondents didn't get either vaccine, others got only one, and some got both. This is formulated as a multilabel (and not multiclass) problem."
+      ],
+      "metadata": {
+        "id": "vWHaftPJdP91"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Basic Information -- Training dataset"
+      ],
+      "metadata": {
+        "id": "HCaw8u63_QLR"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -23,7 +59,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I1ycOXM0P5Bi",
-        "outputId": "971b28d1-c427-4aab-9685-81d0f5d444a7"
+        "outputId": "17175507-32d2-4f1e-9247-c103a4515ed5"
       },
       "outputs": [
         {
@@ -35,39 +71,81 @@
         }
       ],
       "source": [
-        " # Mounting Drive\n",
+        "# Mounting Drive\n",
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/drive', force_remount=True)"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Importing libraries"
+      ],
+      "metadata": {
+        "id": "iLQd7Cuz_ee_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Importing libraries\n",
         "import pandas as pd\n",
         "import numpy as np"
       ],
       "metadata": {
         "id": "MukgvHISRWVB"
       },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Importing Dataset"
+      ],
+      "metadata": {
+        "id": "ScJNb3jBAy9t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b6889f40"
+      },
+      "source": [
+        "# Importing training set features\n",
+        "df_train_features = pd.read_csv('/content/drive/MyDrive/Data_Analysis/H1N1Flu-Prediction/training_set_features.csv')\n",
+        "\n",
+        "# Importing training set labels\n",
+        "df_train_labels = pd.read_csv('/content/drive/MyDrive/Data_Analysis/H1N1Flu-Prediction/training_set_labels .csv')"
+      ],
       "execution_count": 3,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Basic Information"
+      ],
+      "metadata": {
+        "id": "KzO4q8tBBF0B"
+      }
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "# Dsipaly Feature Information\n",
+        "display(df_train_features.head())"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
         },
-        "id": "b6889f40",
-        "outputId": "fd8844dc-0e98-4077-f679-8b4b3af9bc92"
+        "id": "sxthfysfBLfu",
+        "outputId": "6a046f01-915a-459a-96d1-0b00aab4f216"
       },
-      "source": [
-        "# Importing training set features\n",
-        "df_train_features = pd.read_csv('/content/drive/MyDrive/Data_Analysis/H1N1Flu-Prediction/training_set_features.csv')\n",
-        "display(df_train_features.head())"
-      ],
       "execution_count": 4,
       "outputs": [
         {
@@ -127,7 +205,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0e55f548-bbb6-4f5c-ba15-ea30bce141a1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2c729c6a-f75e-4ba4-b6e5-f65313d0f75a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -297,7 +375,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0e55f548-bbb6-4f5c-ba15-ea30bce141a1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2c729c6a-f75e-4ba4-b6e5-f65313d0f75a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -349,12 +427,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0e55f548-bbb6-4f5c-ba15-ea30bce141a1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2c729c6a-f75e-4ba4-b6e5-f65313d0f75a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0e55f548-bbb6-4f5c-ba15-ea30bce141a1');\n",
+              "        const element = document.querySelector('#df-2c729c6a-f75e-4ba4-b6e5-f65313d0f75a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -374,8 +452,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-74f98f05-619d-427a-8762-165561a6b8c1\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-74f98f05-619d-427a-8762-165561a6b8c1')\"\n",
+              "    <div id=\"df-6208506d-6d2a-412a-bf1a-96f0ac6948d3\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6208506d-6d2a-412a-bf1a-96f0ac6948d3')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -494,7 +572,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-74f98f05-619d-427a-8762-165561a6b8c1 button');\n",
+              "            document.querySelector('#df-6208506d-6d2a-412a-bf1a-96f0ac6948d3 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -520,11 +598,10 @@
           "height": 206
         },
         "id": "06bebb23",
-        "outputId": "a8cb6920-39bf-428e-a4e9-4b05f93619c1"
+        "outputId": "b38515ff-a292-4f43-b419-0322c33d3f0f"
       },
       "source": [
-        "# Importing training set labels\n",
-        "df_train_labels = pd.read_csv('/content/drive/MyDrive/Data_Analysis/H1N1Flu-Prediction/training_set_labels .csv')\n",
+        "# Display Label Information\n",
         "display(df_train_labels.head())"
       ],
       "execution_count": 5,
@@ -542,7 +619,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bf92defb-0b25-4e9d-b9ad-ffafa198147d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-55981733-8dfd-419c-ae27-6b28536e592d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -603,7 +680,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf92defb-0b25-4e9d-b9ad-ffafa198147d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-55981733-8dfd-419c-ae27-6b28536e592d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -655,12 +732,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bf92defb-0b25-4e9d-b9ad-ffafa198147d button.colab-df-convert');\n",
+              "        document.querySelector('#df-55981733-8dfd-419c-ae27-6b28536e592d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bf92defb-0b25-4e9d-b9ad-ffafa198147d');\n",
+              "        const element = document.querySelector('#df-55981733-8dfd-419c-ae27-6b28536e592d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -680,8 +757,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ee505a38-296e-45bd-abd6-a92b60ab6312\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee505a38-296e-45bd-abd6-a92b60ab6312')\"\n",
+              "    <div id=\"df-92537652-e7e3-48de-9f2c-05753e0bc09b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-92537652-e7e3-48de-9f2c-05753e0bc09b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -800,7 +877,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ee505a38-296e-45bd-abd6-a92b60ab6312 button');\n",
+              "            document.querySelector('#df-92537652-e7e3-48de-9f2c-05753e0bc09b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -822,16 +899,17 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Training Features Shape \", df_train_features.shape)\n"
+        "# Shape of Training Feature dataset\n",
+        "print(\"Training Features Shape \", df_train_features.shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6b-VEst_SlDy",
-        "outputId": "3691cf1f-95be-442f-fcdf-50c4e3dbc169"
+        "outputId": "2aa73bd6-91f9-4dae-b022-d795d75b2ffd"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,9 +930,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tIQ0L-C_TOOw",
-        "outputId": "a00e03c1-91ea-4e87-8433-f470fabe6977"
+        "outputId": "44fe4a89-1e01-4a8c-d686-c8aa17c98d8c"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,6 +984,116 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Shape of Training labels\n",
+        "print(\"Training Labels Shape \", df_train_labels.shape)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rtN6ZAK1XdTI",
+        "outputId": "7a7743e1-159d-4c2e-943f-881568cd2d0a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Labels Shape  (26707, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Double-check that the rows between the features and the labels match up."
+      ],
+      "metadata": {
+        "id": "BuyPpG3cXrtR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.testing.assert_array_equal(df_train_features.index.values, df_train_labels.index.values)"
+      ],
+      "metadata": {
+        "id": "Au_ArbUeX4ZT"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The assertion ran, without error it means there is no problem. If the two index arrays were not the same, there would be an error."
+      ],
+      "metadata": {
+        "id": "7KlKszUQCWyo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wRVpWQ9PCbu_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Data Exploration"
+      ],
+      "metadata": {
+        "id": "ogvWsdYYIQpp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "X1eNlKhBIS6z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Importing Libraries"
+      ],
+      "metadata": {
+        "id": "caF4eb3BIiMj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%matplotlib inline\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "NHwpPUpaIk6m"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yBV7oqVcIsyc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
